infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: creditos
  namespace: creditos
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "25m"
spec:
  rules:
    - host: credit.innotel.us
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port: { number: 3001 }
          - path: /docs
            pathType: Prefix
            backend:
              service:
                name: api
                port: { number: 3001 }
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port: { number: 3002 }
